fix: Horizontal overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,7 @@ h3 {
     top: 17px;
     left: 10px;
     right: 10px;
-    width: 100%;
+    width: 98%; /* Hack to prevent horizontal overflow */
     text-align: center;
 }
 
